Modification fichier html avec mise en forme

--- a/exo-3/index.html
+++ b/exo-3/index.html
@@ -9,10 +9,10 @@
         <p>Il me faut plusieurs choses:</p>
         <ul>
             <li>Une baguette</li>
-            <li>2 kilos de tomates</li>
-            <li>3 litres de lait</li>
-            <li>5 boites de chewing-gum</li>
+            <li>2 <span style="color:red;">kilos</span> de tomates</li>
+            <li>3 <span style="color:green;">litres</span> de lait</li>
+            <li>5 <strong>boites</strong> de chewing-gum</li>
         </ul>
-        <p>Payer en liquide ou par chèque.</p>
+        <p><em>Payer en liquide ou par chèque.</em></p>
     </body>
 </html>
