--- a/exo-4/index.html
+++ b/exo-4/index.html
@@ -5,10 +5,10 @@
         <title>Exercice 4 HTML/CSS</title>
     </head>
     <body>
-        <h1><img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png">
+        <h1><img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png" alt="Bloc-notes" title="Image bloc-note">
         Tout les petits trus qui me seront utile pour la suite</h1>
-        <p>Le site de codeacademy est <a href="https://www.codecademy.com/">ici.</a></p>
-        <p>Pour pleins de tuto sympa, il y a aussi <a href="https://openclassrooms.com/fr/dashboard/courses">openclassroom.</a></p>
+        <p>Le site de codeacademy est <a href="https://www.codecademy.com/" title="Site de Codecademy">ici.</a></p>
+        <p>Pour pleins de tuto sympa, il y a aussi <a href="https://openclassrooms.com/fr/dashboard/courses" title="Site d'Openclassroom">openclassroom.</a></p>
         <p><a href="https://www.ubuntu-fr.org/">Si je veux devenir un crack sur Ubuntu, il me faut la bonne adresse.</a></p>  
     </body>
 </html>
