--- a/exo-5/index.html
+++ b/exo-5/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Exercices 5 HTML/CSS</title>
-        <style>
-            table, th, td{
-            border : 1px solid black;
+
+<head>
+    <meta charset="UTF-8">
+    <title>Exercices 5 HTML/CSS</title>
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
             border-spacing: 0;
-            }     
-        </style>
-    </head>
-    <body>
-        <table>
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Libellé</th>
-                    <th>Crédit</th>
-                    <th>Débit</th>
-                </tr>
-            </thead>
-            <tfoot>
-                <tr>
-                    <th>Solde</th>
-                    <th colspan="3">575,40</th>
-                </tr>
-            </tfoot>
-            <tbody>
-                <tr>
-                    <td>01/05/2016</td>
-                    <td>Paye</td>
-                    <td>1 500</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>01/05/2016</td>
-                    <td>Courses de la semaine</td>
-                    <td>0</td>
-                    <td>152,30</td>
-                </tr>
-                <tr>
-                    <td>04/05/2016</td>
-                    <td>Mc do</td>
-                    <td>0</td>
-                    <td>32,40</td>
-                </tr>
-                <tr>
-                    <td>05/05/2016</td>
-                    <td>Loyer</td>
-                    <td>0</td>
-                    <td>700</td>
-                </tr>
-                <tr>
-                    <td>05/05/2016</td>
-                    <td>Internet</td>
-                    <td>0</td>
-                    <td>39,90</td>
-                </tr>
-            </tbody>
-            </table>
-    </body>
+        }
+
+        tfoot {
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Libellé</th>
+                <th>Crédit</th>
+                <th>Débit</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th colspan="2">Solde</th>
+                <th colspan="2">575,40</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>01/05/2016</td>
+                <td>Paye</td>
+                <td>1 500</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>01/05/2016</td>
+                <td>Courses de la semaine</td>
+                <td>0</td>
+                <td>152,30</td>
+            </tr>
+            <tr>
+                <td>04/05/2016</td>
+                <td>Mc do</td>
+                <td>0</td>
+                <td>32,40</td>
+            </tr>
+            <tr>
+                <td>05/05/2016</td>
+                <td>Loyer</td>
+                <td>0</td>
+                <td>700</td>
+            </tr>
+            <tr>
+                <td>05/05/2016</td>
+                <td>Internet</td>
+                <td>0</td>
+                <td>39,90</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+
 </html>
