--- a/exo-3/index.html
+++ b/exo-3/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Exercice 3 HTML/CSS</title>
-    </head>
-    <body>
-        <h1>Ma liste de course du 7 Mai 2016</h1>
-        <p>Il me faut plusieurs choses:</p>
-        <ul>
-            <li>Une baguette</li>
-            <li>2 <span style="color:red;">kilos</span> de tomates</li>
-            <li>3 <span style="color:green;">litres</span> de lait</li>
-            <li>5 <strong>boites</strong> de chewing-gum</li>
-        </ul>
-        <p><em>Payer en liquide ou par chèque.</em></p>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Exercice 3 HTML/CSS</title>
+</head>
+
+<body>
+    <h1>Ma liste de course du 7 Mai 2016</h1>
+    <p>Il me faut plusieurs choses:</p>
+    <ul>
+        <li>Une baguette</li>
+        <li>2 <span style="color:red">kilos</span> de tomates</li>
+        <li>3 <span style="color:green">litres</span> de lait</li>
+        <li>5 <span style="font-weight: bold">boites</span> de chewing-gum</li>
+    </ul>
+    <p><em>Payer en liquide ou par chèque.</em></p>
+</body>
+
 </html>
