--- a/exo-6/index.html
+++ b/exo-6/index.html
@@ -8,16 +8,22 @@
 </head>
 
 <body>
-    <div id="conteneur">
-    <div class="element-vert">1</div>
-    <div class="element-bleu">2</div>
-    <div class="element-rouge">3</div>
-    <div class="element-orange">4</div>
-    <div class="element-gris">5</div>
-    <div class="element-jaune">6</div>
-    <div class="element-vert_eau">7</div>
-    <div class="element-orange_fonce">8</div>
-    <div class="element-gris_bleu">9</div>
+    <div class="conteneur">
+        <div class="element-vert">1</div>
+        <div class="element-bleu">2</div>
+    </div>
+    <div class="conteneur_2">
+        <div class="element-rouge">3</div>
+    </div>
+    <div class="conteneur_3">
+        <div class="element-orange">4</div>
+        <div class="element-gris">5</div>
+        <div class="element-jaune">6</div>
+        <div class="element-vert_eau">7</div>
+        <div class="element-orange_fonce">8</div>
+    </div>
+    <div class="conteneur_4"
+        <div class="element-gris_bleu">9</div>
     </div>
 </body>
 
