correction index.html

--- a/exo-6/index.html
+++ b/exo-6/index.html
@@ -8,23 +8,27 @@
 </head>
 
 <body>
-    <div class="conteneur">
-        <div class="element-vert">1</div>
-        <div class="element-bleu">2</div>
+
+    <div id="firstRow">
+        <div id="elementVert">1</div>
+        <div id="elementBleu">2</div>
     </div>
-    <div class="conteneur_2">
-        <div class="element-rouge">3</div>
+
+    <div id="secondRow">
+        <div id="rectangleRouge">3</div>
+        <div id="others">
+            <div id="rectangleOrangeClair">4</div>
+            <div id="rectangleGris">5</div>
+            <div id="rectangleJaune">6</div>
+            <div id="rectangleBleuVert">7</div>
+            <div id="rectangleOrange">8</div>
+        </div>
     </div>
-    <div class="conteneur_3">
-        <div class="element-orange">4</div>
-        <div class="element-gris">5</div>
-        <div class="element-jaune">6</div>
-        <div class="element-vert_eau">7</div>
-        <div class="element-orange_fonce">8</div>
+
+    <div id="thirstRow">
+        <div id="rectangleBleuGris">9</div>
     </div>
-    <div class="conteneur_4"
-        <div class="element-gris_bleu">9</div>
-    </div>
+
 </body>
 
 </html>
